# orne-box

./: orne_box_pkgs.install
orne_box/: package.xml
orne_box_bringup/config/: joy.yaml
orne_box_bringup/config/imu/: adis16465.param.yaml
orne_box_bringup/config/joy/: teleop.config.yaml
orne_box_bringup/config/robot_localization/: ekf.yaml
orne_box_bringup/config/urg/: params_mirror_lidar.yaml
orne_box_bringup/launch/: orne_box.launch  orne_box_3d_lidar.launch  orne_box_bringup.launch.py
orne_box_bringup/launch/include/: adis16465.launch.py  mirror_lidar.launch.py  teleop.launch.py
orne_box_bringup/launch/includes/: description.launch.xml  rfans16.launch  urg.launch
orne_box_description/launch/: display.launch  display.launch.py
orne_box_description/urdf/: orne_box.urdf.xacro  orne_box3.urdf  orne_box3.urdf.xacro  orne_box_3d_lidar.urdf.xacro  orne_box_3d_lidar_rfans.urdf.xacro
orne_box_description/urdf/sensors/: rfans.urdf.xacro
orne_box_lidar_with_mirror/: CMakeLists.txt  package.xml
orne_box_lidar_with_mirror/config/: lidar_with_mirror_control.yaml
orne_box_lidar_with_mirror/include/orne_box_lidar_with_mirror/: convert_pointcloud.h
orne_box_lidar_with_mirror/scripts/: calibrate_mirror_pose.py  check_estimate_posture.py  check_ground_height.py  demo_change_angle.py  estimate_posture.py  experiment.py  hough.py  merge_measured_data.py
orne_box_lidar_with_mirror/src/: convert_pointcloud.cpp  convert_pointcloud_node.cpp  lidar_with_mirror.cpp
orne_box_navigation_executor/config/waypoint_server/: waypoint_server.yaml
orne_box_navigation_executor/launch/: move_base.launch  navigation_launch.py  play_waypoints_nav_box.launch  play_waypoints_nav_box_with_mcl_3dl.launch
orne_box_slam/config/cartographer/: assets_writer_orne-box_3d.lua  orne-box3_2d.lua  orne-box3_3d.lua
orne_box_slam/config/slam_toolbox/: slam_toolbox.param.yaml
orne_box_slam/launch/: assets_writer_orne-box3_3d.launch.py  cartographer_2d.launch.py  cartographer_3d.launch.py  cartographer_orne-box3_2d.launch.py  cartographer_orne-box3_3d_offline.launch.py  offline_node.launch.py
