<?xml version="1.0"?>
<package format="3">
  <name>orne_box_lidar_with_mirror</name>
  <version>0.0.0</version>
  <description>The lidar_with_mirror package</description>
  <maintainer email="babaryusei.kw@gmail.com">Ryusei Baba</maintainer>
  <license>BSD</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>Eigen3</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>lidar_with_mirror_bringup</exec_depend>
  <exec_depend>lidar_with_mirror_control</exec_depend>
  <exec_depend>lidar_with_mirror_description</exec_depend>
  <exec_depend>lidar_with_mirror_navigation_executor</exec_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
